--- a/index.html
+++ b/index.html
@@ -1,9 +1,16 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
-    <meta charset="UTF-8">
+    <meta charset="UTF-8" />
     <title>Fork Me! FCC: Test Suite Template</title>
-    <link rel="stylesheet" href="css/style.css">
+    <link rel="stylesheet" href="css/style.css" />
+    <style>
+      @media only screen and (max-width: 600px) {
+        body {
+          background-color: lightblue;
+        }
+      }
+    </style>
   </head>
 
   <body>
@@ -13,15 +20,20 @@
       <h1>This is a portfolio</h1>
     </section>
     <section id="projects">
-      <div class="project-title"></div>
+      <div class="project-tile">project title</div>
       <a href="https://www.weatherapi.com/">My weather API</a>
-      
     </section>
     <navbar id="navbar">
       <a href="#projects">Projects</a>
+      <br />
     </navbar>
-    <a href="https://github.com/codedit334/microverse_trials_emmanuel_oussama" id="profile-link" target="_blank">GitHub</a>
-    
-    <script  src="js/index.js"></script>
+    <a
+      href="https://github.com/codedit334/microverse_trials_emmanuel_oussama"
+      id="profile-link"
+      target="_blank"
+      >GitHub</a
+    >
+
+    <script src="js/index.js"></script>
   </body>
 </html>
